<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_weight="1"
    >


    <EditText
        android:id="@+id/editText"
        android:layout_width="322dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="318dp"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/xpowy"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/xpown"
        app:layout_constraintStart_toEndOf="@+id/square"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/mode"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/mode1"
        app:layout_constraintStart_toEndOf="@id/equal"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/square"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/clear"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@+id/log"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/sin"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/sin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square" />

    <Button
        android:id="@+id/cos"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/cos"
        app:layout_constraintStart_toEndOf="@id/sin"
        app:layout_constraintTop_toBottomOf="@+id/xpowy" />

    <Button
        android:id="@+id/tan"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tan"
        app:layout_constraintStart_toEndOf="@id/cos"
        app:layout_constraintTop_toBottomOf="@+id/log" />

    <Button
        android:id="@+id/backSpace"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/backspace"
        app:layout_constraintStart_toEndOf="@id/tan"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/inverse"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sin" />

    <Button
        android:id="@+id/factorial"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/factorial"
        app:layout_constraintStart_toEndOf="@id/inverse"
        app:layout_constraintTop_toBottomOf="@+id/cos" />

    <Button
        android:id="@+id/sqrt"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/sqrt"
        app:layout_constraintStart_toEndOf="@+id/factorial"
        app:layout_constraintTop_toBottomOf="@+id/tan" />

    <Button
        android:id="@+id/pi"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/pi"
        app:layout_constraintStart_toEndOf="@+id/sqrt"
        app:layout_constraintTop_toBottomOf="@+id/backSpace" />

    <Button
        android:id="@+id/num7"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:background="@drawable/custom_button"
        android:text="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inverse" />

    <Button
        android:id="@+id/num8"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="8"
        app:layout_constraintStart_toEndOf="@+id/num7"
        app:layout_constraintTop_toBottomOf="@+id/factorial" />

    <Button
        android:id="@+id/num9"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="9"
        app:layout_constraintStart_toEndOf="@+id/num8"
        app:layout_constraintTop_toBottomOf="@+id/sqrt" />

    <Button
        android:id="@+id/divide"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/divide"
        app:layout_constraintStart_toEndOf="@+id/num9"
        app:layout_constraintTop_toBottomOf="@+id/pi" />

    <Button
        android:id="@+id/num4"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num7" />

    <Button
        android:id="@+id/num5"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="5"
        app:layout_constraintStart_toEndOf="@+id/num4"
        app:layout_constraintTop_toBottomOf="@+id/num8" />

    <Button
        android:id="@+id/num6"
        android:layout_width="83dp"
        android:background="@drawable/custom_button"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="6"
        app:layout_constraintStart_toEndOf="@+id/num5"
        app:layout_constraintTop_toBottomOf="@+id/num9" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="X"
        app:layout_constraintStart_toEndOf="@+id/num6"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/num1"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="1"
        android:background="@drawable/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num4" />

    <Button
        android:id="@+id/num2"
        android:background="@drawable/custom_button"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="2"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/num5" />

    <Button
        android:id="@+id/num3"
        android:background="@drawable/custom_button"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="3"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/num6" />

    <Button
        android:id="@+id/minus"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/num3"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/posneg"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/posneg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/num0"
        android:background="@drawable/custom_button"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/posneg"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/dot"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="."
        app:layout_constraintStart_toEndOf="@+id/num0"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <Button
        android:id="@+id/plus"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/openBracket"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/openBracket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posneg" />

    <Button
        android:id="@+id/closeBracket"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/closeBracket"
        app:layout_constraintStart_toEndOf="@+id/openBracket"
        app:layout_constraintTop_toBottomOf="@+id/num0" />

    <Button
        android:id="@+id/equal"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="="
        app:layout_constraintStart_toEndOf="@+id/closeBracket"
        app:layout_constraintTop_toBottomOf="@+id/dot" />

    <Button
        android:id="@+id/log"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/log"
        app:layout_constraintStart_toEndOf="@+id/xpowy"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_camera_alt_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>